[package]
name = "ray-tracing-weekend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_float_eq = "1.1.3"
fontdue = "0.7.3"
num = "0.4.1"
pixels = "0.13.0"
rand = "0.8.5"
winit = "0.28.6"
winit_input_helper = "0.14.1"
